--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                     d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                             </svg>
                         </div>
-                        <a href="ttransaction_new.html"
+                        <a href="transaction.html"
                             class="bg-finsync-primary text-white font-semibold px-8 py-3 rounded-full shadow-lg hover:bg-opacity-90 transition-all duration-300 text-lg mb-4">
                             2. Add Transactions
                         </a>
@@ -575,3 +575,4 @@
 </body>
 
 </html>
+
