--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     class="text-white hover:text-finsync-secondary transition-colors duration-300">How It Works</a>
                 <a href="#contact"
                     class="text-white hover:text-finsync-secondary transition-colors duration-300">Contact</a>
-                <a href="file:///C:/Users/VICTUS/home%20page/mainlogin.html"
+                <a href="mainlogin.html"
                     class="bg-white text-finsync-primary font-semibold px-5 py-2 rounded-full shadow-md hover:bg-finsync-secondary hover:text-white transition-all duration-300">
                     Join
                 </a>
@@ -575,5 +575,6 @@
 </body>
 
 </html>
+
 
 
